--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
     "pinia": "^3.0.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^3.53.1",
     "tailwindcss": "^4.0.15",
     "vue": "^3.5.13",
+    "vue-draggable-plus": "^0.6.0",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
