--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
+    "@vueuse/core": "^13.0.0",
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^3.53.1",
