--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,14 @@
     "@tailwindcss/vite": "^4.0.15",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.15",
+    "three": "^0.175.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "prettier": "3.5.3",
-    "vite": "^6.2.1",
+    "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
 }
